--- a/p5/Final project/index.html
+++ b/p5/Final project/index.html
@@ -12,7 +12,7 @@
     }
   </style>
   <script src="library/p5.js"></script>
-  <!-- <script src="../addons/p5.sound.js"></script> -->
+  <script src="../addons/p5.sound.js"></script>
   <script src="sketch.js"></script>
 </head>
 
