--- a/p5/Final project/index.html
+++ b/p5/Final project/index.html
@@ -12,7 +12,9 @@
     }
   </style>
   <script src="library/p5.js"></script>
-  <script src="../addons/p5.sound.js"></script>
+    <script src="library/p5.play.js"></script>
+     <script src="library/p5.sound.js"></script>
+     <script src="library/p5.speech.js"></script>
   <script src="sketch.js"></script>
 </head>
 
